Overflow & project div fixes

--- a/css/default.css
+++ b/css/default.css
@@ -27,7 +27,8 @@
 ::-webkit-scrollbar {
     position:fixed;
     width: 9px;
-       background-color: rgba(0, 0, 0, 0.1)
+    height: 8px;
+    background-color: rgba(0, 0, 0, 0.1)
 }
 
 ::-webkit-scrollbar-thumb {
@@ -455,6 +456,7 @@ p.lift {
     text-align: center;
     font-weight: 800;
     color: var(--text4);
+    margin: 0.7em;
 }
 
 .project-bg {
@@ -621,6 +623,12 @@ All bg animatin stuff
     }
 
 }   
+
+@media only screen and (max-width: 670px) { 
+    span.brand {
+        display: none;
+    }
+}
 
 @media (prefers-reduced-motion: reduce) {
     .bubble {
